// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitReviewModal should match a snapshot where a customer and status is incomplete and user is an admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.p
          classname="el-text-base"
        >
          Any changes have been saved successfully.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base"
        >
          However, before an app can be submitted (either privately or publicly), we will first need to verify your account information as API Consumption charges will apply.
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb6"
        >
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="reapitReference"
            placeholder="Enter your Reapit reference here"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Reapit Reference
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          You can find your Reapit Reference from any Reapit correspondence under the ‘Account’ section.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base"
        >
          The verification process is typically completed within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
        </mock-styled.p>
        <mock-styled.div>
          <mock-styled.div
            classname="el-button-group-align-right"
          >
            <mock-styled.button
              classname="el-intent-neutral"
            >
              <mock-styled.div />
              Close
            </mock-styled.button>
            <mock-styled.button
              classname="el-intent-primary"
              disabled="false"
              type="submit"
            >
              <mock-styled.div />
              Submit
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.p
        classname="el-text-base"
      >
        Any changes have been saved successfully.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        However, before an app can be submitted (either privately or publicly), we will first need to verify your account information as API Consumption charges will apply.
      </mock-styled.p>
      <mock-styled.div
        classname="el-mb6"
      >
        <mock-styled.input
          classname=""
          id="test-static-id"
          name="reapitReference"
          placeholder="Enter your Reapit reference here"
          type="text"
        />
        <mock-styled.label
          htmlfor="test-static-id"
        >
          Reapit Reference
        </mock-styled.label>
      </mock-styled.div>
      <mock-styled.p
        classname="el-text-base"
      >
        You can find your Reapit Reference from any Reapit correspondence under the ‘Account’ section.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        The verification process is typically completed within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Close
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="submit"
          >
            <mock-styled.div />
            Submit
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SubmitReviewModal should match a snapshot where a customer and status is incomplete and user not an admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <form>
        <mock-styled.p
          classname="el-text-base"
        >
          Any changes have been saved successfully.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base"
        >
          However, before an app can be submitted (either privately or publicly), we will first need to verify your account information as API Consumption charges will apply.
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb6"
        >
          <mock-styled.input
            classname=""
            id="test-static-id"
            name="reapitReference"
            placeholder="Enter your Reapit reference here"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Reapit Reference
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.p
          classname="el-text-base"
        >
          You can find your Reapit Reference from any Reapit correspondence under the ‘Account’ section.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base"
        >
          The verification process is typically completed within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
        </mock-styled.p>
        <mock-styled.div>
          <mock-styled.div
            classname="el-button-group-align-right"
          >
            <mock-styled.button
              classname="el-intent-neutral"
            >
              <mock-styled.div />
              Close
            </mock-styled.button>
            <mock-styled.button
              classname="el-intent-primary"
              disabled="false"
              type="submit"
            >
              <mock-styled.div />
              Submit
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </form>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <form>
      <mock-styled.p
        classname="el-text-base"
      >
        Any changes have been saved successfully.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        However, before an app can be submitted (either privately or publicly), we will first need to verify your account information as API Consumption charges will apply.
      </mock-styled.p>
      <mock-styled.div
        classname="el-mb6"
      >
        <mock-styled.input
          classname=""
          id="test-static-id"
          name="reapitReference"
          placeholder="Enter your Reapit reference here"
          type="text"
        />
        <mock-styled.label
          htmlfor="test-static-id"
        >
          Reapit Reference
        </mock-styled.label>
      </mock-styled.div>
      <mock-styled.p
        classname="el-text-base"
      >
        You can find your Reapit Reference from any Reapit correspondence under the ‘Account’ section.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        The verification process is typically completed within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Close
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="submit"
          >
            <mock-styled.div />
            Submit
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SubmitReviewModal should match a snapshot where a customer and status is pending 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="el-text-base"
      >
        We are currently verifying your account information. This is typically done within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Close
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="el-text-base"
    >
      We are currently verifying your account information. This is typically done within 1 – 2 working days. You will be notified via email when this has been completed and you can continue with your app submission.
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-right"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Close
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SubmitReviewModal should match a snapshot where not a customer 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="el-text-base"
      >
        Any changes have been saved successfully.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        However, before you can list an app in the AppMarket ('Submit for approval'), you will first need to submit your account information.
      </mock-styled.p>
      <mock-styled.p
        classname="el-text-base"
      >
        Please
         
        <a
          href="mailto:jhennessy@reapit.com?subject=Submitting%20my%20app%20for%20approval%20/%20listing%20in%20the%20AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
           
          click here
        </a>
         
        to contact a member of the team.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="el-button-group-align-right"
        >
          <mock-styled.button
            classname="el-intent-neutral"
          >
            <mock-styled.div />
            Close
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="el-text-base"
    >
      Any changes have been saved successfully.
    </mock-styled.p>
    <mock-styled.p
      classname="el-text-base"
    >
      However, before you can list an app in the AppMarket ('Submit for approval'), you will first need to submit your account information.
    </mock-styled.p>
    <mock-styled.p
      classname="el-text-base"
    >
      Please
       
      <a
        href="mailto:jhennessy@reapit.com?subject=Submitting%20my%20app%20for%20approval%20/%20listing%20in%20the%20AppMarket"
        rel="noopener noreferrer"
        target="_blank"
      >
         
        click here
      </a>
       
      to contact a member of the team.
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="el-button-group-align-right"
      >
        <mock-styled.button
          classname="el-intent-neutral"
        >
          <mock-styled.div />
          Close
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
